--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,16 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
+    <!-- MessageBroker -->
+    <dependency>
+        <groupId>org.apache.activemq</groupId>
+        <artifactId>activemq-broker</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.activemq</groupId>
+        <artifactId>activemq-kahadb-store</artifactId>
+        <scope>runtime</scope>
+    </dependency>
   </dependencies>
   
   <dependencyManagement>
